--- a/client/partials/DetailsWines.html
+++ b/client/partials/DetailsWines.html
@@ -1,15 +1,47 @@
-<h3> {{action}} Wine <h3>
-<div>
-Name  :
-<input data-ng-model="wine.name" type="text">
-<br/>
+<div class="row-fluid">
 
-Country  :
-<input data-ng-model="wine.country" type="text">
-<br/>
+<form class="form-horizontal span12">
 
-<button class="btn btn-primary" ng-click="save()">{{action}}</button>
+<fieldset>
 
-<a href="/" class="btn">Cancel</a>
+	<legend>
+		Wine Details
+	</legend>
+            
+     <br/>
+
+            <div class="row">
+                <div class="span8">
+
+                    <div class="control-group">
+                        <label class="control-label">Name:</label>
+
+                        <div class="controls">
+                            <input data-ng-model="wine.name" type="text">
+                            <span class="help-inline"></span>
+
+                        </div>
+                    </div>
+
+                    <div class="control-group">
+                        <label class="control-label">Country:</label>
+
+                        <div class="controls">
+                            <input data-ng-model="wine.country" type="text">
+                            <span class="help-inline"></span>
+                        </div>
+                    </div>
+		       </div>
+            </div>
+ </fieldset>
+
+
+
+<div class="form-actions">
+    <button class="btn btn-primary save" ng-click="save()">Save</button>
+    <a href="/" class="btn">Cancel</a>
+</div>
+
+</form>
 
 </div>
